# ImagNum

./: .gitignore  CHANGELOG.md  CRATE_DOCS.md  Cargo.toml  LICENSE  README.md  imagnum-cli.rs  imagnum.rs  simple-repl.rs  tests.rs
.github/workflows/: imagnum.yml
core/: compat.rs  features.rs  foundation.rs  functions.rs  impls.rs  math.rs  ops.rs
tests/: all_features.rs  approx_eq.rs  bit_ops.rs  complex.rs  display_format.rs  features.rs  from_hex.rs  mixed_ref_value_ops.rs  negative_numbers.rs  ord.rs  overflow.rs  pow.rs  pow_bigdecimal.rs  radix.rs  recurring_equality.rs  ref_ops.rs  small_types.rs  transcendental.rs
