[package]
name = "imagnum"
version = "0.1.34"
edition = "2024"
authors = ["SirPigari"]
description = "A Rust library providing versatile numeric types supporting integers and floats designed for the Lucia programming language."
license = "MIT"
repository = "https://github.com/SirPigari/imagnum"
readme = "README.md"
keywords = ["numeric", "numbers", "float", "integer", "lucia"]
categories = ["mathematics"]
documentation = "https://docs.rs/imagnum"
homepage = "https://github.com/SirPigari/imagnum"
default-run = "repl"

[dependencies]
bigdecimal = "0.4.8"
once_cell = "1.21.3"

[lib]
path = "imagnum.rs"

[[bin]]
name = "repl"
path = "simple-repl.rs"

[[bin]]
name = "test"
path = "test.rs"
