[package]
name = "imagnum"
version = "0.2.27"
edition = "2024"
authors = ["SirPigari"]
description = "A Rust library providing versatile numeric types supporting integers and floats designed for the Lucia programming language."
license = "MIT"
repository = "https://github.com/SirPigari/imagnum"
readme = "README.md"
keywords = ["numeric", "numbers", "float", "integer", "lucia"]
categories = ["mathematics"]
documentation = "https://docs.rs/imagnum"
homepage = "https://github.com/SirPigari/imagnum"
default-run = "imagnum-cli"

[dependencies]
bigdecimal = "0.4.8"
once_cell = "1.21.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
pastey = "0.1.1"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.9.2", optional = true }

[dev-dependencies]
imagnum = { path = ".", features = ["serde", "random"] }


[lib]
path = "imagnum.rs"

[[bin]]
name = "imagnum-cli"
path = "imagnum-cli.rs"
required-features = ["cli"]

[features]
default = ["cli"]

cli = []
serde = ["dep:serde", "dep:serde_json"]
random = ["dep:rand"]

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
